k8s-study/examples/10-capstone/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-capstone
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
