k8s-study/examples/10-capstone/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: capstone-web
  namespace: k8s-capstone
  labels:
    app: capstone-web
spec:
  selector:
    app: capstone-web
  ports:
    - name: http
      port: 80
      targetPort: http
