k8s-study/examples/10-capstone/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: capstone-web
  namespace: k8s-capstone
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: capstone.localtest.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: capstone-web
                port:
                  number: 80
